# hexcloud

./: CMakeLists.txt  Dockerfile  Makefile  README.md  example.sql  go.mod  go.sum  hexagon.db  hexdata.sql  hexmap.txt  hexrepo.txt  schema.sql
.github/workflows/: cloud-run.yml
api/: hexagon.proto
apps/: CMakeLists.txt  hexclientcli.cpp  hexservercli.cpp
cmd/: hexcloud.go
cmd/hexcloud/: hexcloud.go
deploy/gcloud/: README.md  api_config.yaml  api_descriptor.pb
deploy/hexcloud/: Dockerfile
hexlib/: CMakeLists.txt  HexagonClient.cpp  HexagonService.cpp  HexagonStorage.cpp  hexagon.proto
hexlib/protos/: hexagon.proto
include/hexlib/: HexagonClient.hpp  HexagonLibrary.hpp  HexagonService.hpp  HexagonStorage.hpp
internal/pkg/hexcloud/: hexagon.pb.go  hexagon_grpc.pb.go  server.go  storage.go
internal/pkg/hexgrid/: hex.go  hex_test.go  layout.go
test/: hexdata.txt
